Build: use docker buildx Deliver plain unzipped not minified Javascript file application.js